add_subdirectory(loadtxt)
add_subdirectory(sort)
add_subdirectory(assert_error)
add_subdirectory(constants)
add_subdirectory(strings)
add_subdirectory(mesh)
add_subdirectory(ppm)
add_subdirectory(optimize)
add_subdirectory(special)
if(WITH_LAPACK)
    add_subdirectory(splines)
    add_subdirectory(linalg)
endif()
if(WITH_HDF5)
    add_subdirectory(hdf5)
endif()
